Rename once again, smart_home is now homestack

--- a/homestack.yml
+++ b/homestack.yml
@@ -1,8 +1,8 @@
-- hosts: smart_home
+- hosts: homestack
   become: yes
   roles:
+    #    - geerlingguy.docker
     - udev
-    - docker
     - mosquitto
     - zigbee2mqtt
     - zwave2mqtt
