Add geerlingguy.pip to install docker-compose

--- a/homestack.yml
+++ b/homestack.yml
@@ -1,7 +1,8 @@
 - hosts: homestack
   become: yes
   roles:
-    #    - geerlingguy.docker
+    - geerlingguy.docker
+    - geerlingguy.pip
     - udev
     - mosquitto
     - zigbee2mqtt
