Rename udev group vars main var to udev_config

--- a/roles/udev/tasks/main.yml
+++ b/roles/udev/tasks/main.yml
@@ -11,7 +11,7 @@
   template:
     src: udev-template.rules.j2
     dest: "/etc/udev/rules.d/{{ item.priority }}-{{ item.filename }}.rules"
-  loop: "{{ udev.rules }}"
+  loop: "{{ udev_config.rules }}"
 
 - name: Reload & Trigger udev rules
   shell: "udevadm control --reload-rules && udevadm trigger"
