Created hass role, added duckdns variables and added nginxinc roles to reqs

--- a/roles/nodered/tasks/main.yml
+++ b/roles/nodered/tasks/main.yml
@@ -16,7 +16,7 @@
   loop:
     - data
 
-- name: Generate configuration.yml
+- name: Generate settings.js
   template:
     src: settings.js.j2
     dest: "{{ nodered_data_dir }}/settings.js"
