--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,7 @@ roles:
     version: 4.1.3
   - name: geerlingguy.pip
     version: 2.1.0
+  - name: nginxinc.nginx
+    version: 0.22.0
+  - name: nginxinc.nginx_config
+    version: 0.4.2
