--- a/roles/homestack/tasks/main.yml
+++ b/roles/homestack/tasks/main.yml
@@ -6,3 +6,7 @@
     clone: yes
     dest: "{{ homestack_config.install_source }}"
 
+- name: Configure .env file
+  template:
+    src: env.j2  
+    dest: "{{ homestack_config.install_source }}/.env"
