make docker-compose pull not start services

--- a/roles/duckdns/tasks/main.yml
+++ b/roles/duckdns/tasks/main.yml
@@ -4,7 +4,7 @@
   docker_compose:
     project_src: "{{ homestack_config.install_source }}"
     pull: yes
-    state: present
+    state: absent
     services: duckdns
 
 - name: (re)start duckdns container with compose
