--- a/roles/hass/tasks/main.yml
+++ b/roles/hass/tasks/main.yml
@@ -4,7 +4,7 @@
   docker_compose:
     project_src: "{{ homestack_config.install_source }}"
     pull: yes
-    state: present
+    state: absent
     services: homeassistant
 
 - name: Ensure correct folders exist
