--- a/roles/zwavejs2mqtt/tasks/main.yml
+++ b/roles/zwavejs2mqtt/tasks/main.yml
@@ -26,7 +26,7 @@
   args:
     executable: "{{ ansible_facts['python']['executable'] }}"
   loop: "{{ zwavejs2mqtt_config.users }}"
-  register: hashed_passwords
+  register: zwavejs2mqtt_hashed_passwords
 
 - name: Generate users.json
   template:
