--- a/roles/duckdns/tasks/main.yml
+++ b/roles/duckdns/tasks/main.yml
@@ -4,7 +4,8 @@
   docker_compose:
     project_src: "{{ homestack_config.install_source }}"
     pull: yes
-    state: absent
+    state: present
+    stopped: yes
     services: duckdns
 
 - name: (re)start duckdns container with compose
